test/lit/vmi_new/vmi_layout_e2e_vload_masked.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: pto-test-opt %s -vmi-lower-unified-to-legacy -vmi-layout-assignment -vmi-to-vpto 2>&1 | FileCheck %s

// E2E layout: vload → vadd → vstore masked continuous.

module {
  func.func @vload_add_vstore_e2e(
      %src: !pto.ptr<f32, ub>, %dst: !pto.ptr<f32, ub>, %off: index) {
    %x = pto.vmi.vload %src[%off] {dist_mode = "continuous"}
        : !pto.ptr<f32, ub> -> !pto.vmi.vreg<64xf32>
    %x2 = pto.vmi.vadd %x, %x
        : !pto.vmi.vreg<64xf32>, !pto.vmi.vreg<64xf32> -> !pto.vmi.vreg<64xf32>
    pto.vmi.vstore %x2, %dst[%off] {dist_mode = "continuous"}
        : !pto.vmi.vreg<64xf32>, !pto.ptr<f32, ub>
    return
  }
}

// CHECK-NOT: pto.vmi.
// CHECK-NOT: !pto.vmi.
// CHECK-NOT: error:
